dependencies_from_dda -> dda_dependencies

--- a/assistants/prepare/custom.yaml
+++ b/assistants/prepare/custom.yaml
@@ -30,5 +30,5 @@ custom:
     - if not "$dirname":
       - log_e: Could not checkout sources - $git_output
     - cl: cd "$dirname"
-    - dependencies_from_dda: .
+    - dda_dependencies: .
     - log_i: Your project is prepared in $path/$dirname.
