Use dda_run in preparer assistant

--- a/assistants/prepare/custom.yaml
+++ b/assistants/prepare/custom.yaml
@@ -31,4 +31,5 @@ custom:
       - log_e: Could not checkout sources - $git_output
     - cl: cd "$dirname"
     - dda_dependencies: .
+    - dda_run: .
     - log_i: Your project is prepared in $path/$dirname.
