Use gui_hints in arguments

--- a/assistants/preparer/custom.yaml
+++ b/assistants/preparer/custom.yaml
@@ -19,6 +19,8 @@ custom:
         Path where to checkout the repo (will be created if it does not exist).
       required: False
       default: .
+      gui_hints:
+        type: path
 
   run:
     - if not $(test -e "$path"):
