Use the official DevAssistant name

--- a/assistants/preparer/custom.yaml
+++ b/assistants/preparer/custom.yaml
@@ -1,6 +1,6 @@
 custom:
   fullname: Custom Project
-  description: Set up environment for developing custom project previously created with Devassistant.
+  description: Set up environment for developing custom project previously created with DevAssistant.
 
   args:
     url:
