--- a/assistants/prep/custom.yaml
+++ b/assistants/prep/custom.yaml
@@ -21,14 +21,18 @@ custom:
         Path where to checkout the repo (will be created if it does not exist).
 
   run:
-    - if not $(test -e "$path"):
-      - cl: mkdir -p "$path"
-    - cl: cd "$path"
-    - $git_output: $(git clone "$url")
-    - $dirname: $(echo "$git_output" | grep "Cloning into" | sed "s|.*'\(.*\)'.*|\1|")
-    - if not "$dirname":
-      - log_e: Could not checkout sources - $git_output
-    - cl: cd "$dirname"
+  - if not $(test -e "$path"):
+    - cl: mkdir -p "$path"
+  - cl: cd "$path"
+  - log_i: "Cloning project from remote git repo ..."
+  - $git_output: $(git clone "$url")
+  - $dirname: $(echo "$git_output" | grep "Cloning into" | sed "s|.*'\(.*\)'.*|\1|")
+  - if not "$dirname":
+    - log_e: Could not checkout sources - $git_output
+  - cl: cd "$dirname"
+  - if $(test -e .devassistant):
     - dda_dependencies: .
     - dda_run: .
-    - log_i: Your project is prepared in $path/$dirname.
+  - else:
+    - log_i: "No .devassistant file found, skipping project-specific setup."
+  - log_i: "Your project is prepared in $path/$dirname."
