Git error handling in prep/custom (Fixes #42)

--- a/assistants/prep/custom.yaml
+++ b/assistants/prep/custom.yaml
@@ -42,6 +42,9 @@ run:
     - log_e: Failed to fork github repo, exiting ...
 - log_i: "Cloning project from remote git repo ..."
 - $git_output~: $(git clone "$url")
+- if $(echo "$git_output" | grep -q "^fatal"):
+  - $git_error~: $(echo "$git_output" | grep "^fatal" | sed -e "s/^fatal://")
+  - log_e: "Error cloning repository: $git_error"
 - $dirname~: $(echo "$git_output" | grep "Cloning into" | sed "s|.*'\(.*\)'.*|\1|")
 - if not "$dirname":
   - log_e: Could not checkout sources - $git_output
