--- a/assistants/prep/custom.yaml
+++ b/assistants/prep/custom.yaml
@@ -26,20 +26,25 @@ args:
     nargs: '?'
     gui_hints:
       default: $(whoami)
+    preserved: prep.custom.gh_fork
 
 run:
 - if not $(test -e "$path"):
   - cl: mkdir -p "$path"
 - cl: cd "$path"
+
 - if defined $gh_fork:
+  - $gh_username~:
+    - use: self.run_get_github_username
   - $oldurl: $url
   - $lres, $url~:
     - github:
       - create_fork
-      - login: $gh_fork
+      - login: $gh_username
         repo_url: $url
   - if not $lres:
     - log_e: Failed to fork github repo, exiting ...
+
 - log_i: "Cloning project from remote git repo ..."
 - $git_output~: $(git clone "$url")
 - if $(echo "$git_output" | grep -q "^fatal"):
@@ -58,3 +63,14 @@ run:
 - else:
   - log_i: "No .devassistant file found, skipping project-specific setup."
 - log_i: "Your project is prepared in $path/$dirname."
+
+# Determining the correct username in this order: user-provided argument > github global config > whoami
+run_get_github_username:
+- if $([ "$gh_fork" == "" ]):
+  - $gh_conf_username~: $(git config --global --get-regexp 'github\.user\..*' '.+' | head -1 | grep -o '\S\+$')
+  - if not "$gh_conf_username":
+    - $gh_username~: $(whoami)
+  - else:
+    - $gh_username~: "$gh_conf_username"
+- else:
+  - $gh_username~: "$gh_fork"
